tests/NormalTests/paczka1/fuzzy1/30841270.err
Error in line 4: S686 A176 41,4
Error in line 20: Gktjg A728 77,0
Error in line 21: Gktjg A726 14,2
Error in line 29: Gktjg A176 68,8
